--- a/css/form.css
+++ b/css/form.css
@@ -242,7 +242,7 @@ input[type="checkbox"]:checked {
   padding: 112px 150px 96px;
   border-radius: 8px;
   z-index: 100;
-  /* display: none; */
+  display: none;
 }
 
 .form-modal-secondary-header {
